--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,10 @@
 env:
   - GO111MODULE=on
+
 before:
   hooks:
     - go mod download
+
 builds:
   - ldflags: -s -w
     env:
@@ -16,21 +18,23 @@ builds:
       - amd64
       - arm
       - arm64
+
 archives:
   -
     name_template: >-
       {{- .ProjectName }}_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
-      {{- if eq .Arch "arm" }}armv7a
+      {{- else if eq .Arch "arm" }}armv7a
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end -}}
     format: gz
     format_overrides:
-    - goos: windows
-      format: zip
+      - goos: windows
+        format: zip
     files:
-    - none*
+      - none*
+
 checksum:
   name_template: "checksums.txt"
