--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.18.x
+          go-version: latest
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
