--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,13 @@ jobs:
           go-version: latest
       -
         name: Run GoReleaser
-        uses: actions/create-release@v1
+        uses: goreleaser/goreleaser-action@v1
         with:
           version: latest
           args: release --rm-dist
+      -
+        name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
