--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,5 +31,9 @@ jobs:
         name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
